--- a/src/package.json
+++ b/src/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/nudj/schemas/issues"
   },
-  "homepage": "https://github.com/nudj/schemas#readme"
+  "homepage": "https://github.com/nudj/schemas#readme",
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "nodemon": "^1.11.0",
+    "standard": "^9.0.1"
+  }
 }
