--- a/src/package.json
+++ b/src/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/nudj/schemas#readme",
   "devDependencies": {
     "chai": "^3.5.0",
+    "dirty-chai": "^1.2.2",
     "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
     "standard": "^9.0.1"
